# rrai-desktop-sdk

./: .gitignore  Cargo.toml  README.md
crates/rrai-cloud-client/: Cargo.toml
crates/rrai-cloud-client/src/: constants.rs  lib.rs
crates/rrai-cloud-client/src/dataset/: dataset_service.rs  mod.rs
crates/rrai-cloud-client/src/meta/: mod.rs  schemas_service.rs
crates/rrai-core/: Cargo.toml
crates/rrai-desktop-sdk-common/: Cargo.toml
crates/rrai-desktop-sdk-common/src/: lib.rs
crates/rrai-desktop-sdk-common/src/config/: models.rs
crates/rrai-desktop-sdk-common/src/ipfs/: downloader.rs  mod.rs  uploader.rs
crates/rrai-desktop-sdk-common/src/sqlite/: mod.rs
crates/rrai-desktop-sdk-common/src/sqlite/migration/: database_version.rs  mod.rs
crates/rrai-desktop-sdk-common/src/utils/: files.rs  mod.rs  rate_limiter.rs  stdout_channel.rs  zip.rs
crates/rrai-libp2p/: Cargo.toml  README.md
crates/rrai-libp2p/examples/: dcurt copy.rs  dcurt.rs  ping.rs  relay.rs
crates/rrai-sqlite/: Cargo.toml
crates/rrai-substrate/: Cargo.toml
crates/stable-diffusion-webui-client/: Cargo.toml
crates/stable-diffusion-webui-client/src/: lib.rs
docs/: ffmpeg.md  sd.md
plugins/tauri-plugin-rrai-ability/: Cargo.toml  README.md
plugins/tauri-plugin-rrai-ability/examples/: py_test.rs  system_infor.rs
plugins/tauri-plugin-rrai-ability/src/: constants.rs  handlers.rs  lib.rs  models.rs
plugins/tauri-plugin-rrai-ability/src/abilities/: abilities_env_service.rs  abilities_service.rs  mod.rs  perform_service.rs  scan_service.rs
plugins/tauri-plugin-rrai-ability/src/abilities/docker/: env.rs
plugins/tauri-plugin-rrai-ability/src/abilities/ffmpeg/: env.rs  perform.rs
plugins/tauri-plugin-rrai-ability/src/abilities/python/: env.rs  mod.rs  perform.rs
plugins/tauri-plugin-rrai-ability/src/abilities/python/source/: analyze_key_frames.py  ebsynth_stage5.py
plugins/tauri-plugin-rrai-ability/src/abilities/stable_diffusion/: env.rs  main.py  perform.rs  test_main.py
plugins/tauri-plugin-rrai-ability/src/abilities/stable_diffusion_webui/: env.rs  mod.rs  perform.rs
plugins/tauri-plugin-rrai-ability/src/abilities/stable_diffusion_webui/api/: http.rs  mod.rs  txt2img.rs
plugins/tauri-plugin-rrai-ability/src/migration/: mod.rs  v_1_0_0.sql
plugins/tauri-plugin-rrai-ability/src/tasks/: local_process_task.rs  mod.rs  task_service.rs
plugins/tauri-plugin-rrai-ability/src/terminal/: mod.rs  terminals.rs
plugins/tauri-plugin-rrai-ability/src/utils/: cmd.rs
plugins/tauri-plugin-rrai-ability/src/workspaces/workspace/: create.rs  delete.rs  workspace.rs
plugins/tauri-plugin-rrai-appbox/: Cargo.toml
plugins/tauri-plugin-rrai-appbox/src/: app_downloader.rs  app_server.rs  constants.rs  handlers.rs  lib.rs  models.rs  proxy.rs
plugins/tauri-plugin-rrai-appbox/src/rrapp/: downloader.rs  manager.rs  mod.rs
plugins/tauri-plugin-rrai-idns/: Cargo.toml  README.md
plugins/tauri-plugin-rrai-idns/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-rrai-idns/examples/: worker.rs
plugins/tauri-plugin-rrai-idns/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri-plugin-rrai-idns/examples/vanilla/src-tauri/src/: main.rs
plugins/tauri-plugin-rrai-idns/src/: constants.rs  handlers.rs  lib.rs  request.rs
plugins/tauri-plugin-rrai-idns/src/dataset/: datasets.rs  mod.rs
plugins/tauri-plugin-rrai-idns/src/ipfs/: files.rs  mod.rs  pins.rs
plugins/tauri-plugin-rrai-idns/src/meta/: mod.rs  schemas.rs
plugins/tauri-plugin-rrai-idns/src/task/: tasks.rs
plugins/tauri-plugin-rrai-ipfs/: Cargo.toml  README.md
plugins/tauri-plugin-rrai-ipfs/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-rrai-ipfs/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri-plugin-rrai-ipfs/examples/vanilla/src-tauri/src/: main.rs
plugins/tauri-plugin-rrai-ipfs/src/: lib.rs
plugins/tauri-plugin-rrai-sqlite/: Cargo.toml  README.md
plugins/tauri-plugin-rrai-sqlite/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-rrai-sqlite/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri-plugin-rrai-sqlite/examples/vanilla/src-tauri/src/: main.rs
plugins/tauri-plugin-rrai-sqlite/src/: lib.rs  sqlite.rs
plugins/tauri-plugin-rrai-storage/: Cargo.toml  README.md
plugins/tauri-plugin-rrai-storage/src/: constants.rs  handlers.rs  lib.rs  models.rs
plugins/tauri-plugin-rrai-storage/src/files/: file_service.rs  mod.rs
plugins/tauri-plugin-rrai-storage/src/ipfs/: mod.rs
plugins/tauri-plugin-rrai-storage/src/migration/: mod.rs  v_1_0_0.rs  v_1_0_0.sql
plugins/tauri-plugin-rrai-substrate/: Cargo.toml  README.md
plugins/tauri-plugin-rrai-substrate/.changes/: config.json  initial-release.md  readme.md
plugins/tauri-plugin-rrai-substrate/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri-plugin-rrai-substrate/examples/vanilla/src-tauri/src/: main.rs
plugins/tauri-plugin-rrai-substrate/src/: lib.rs
src/: lib.rs  plugins.rs
src/commands/: mod.rs
