[package]
edition = "2021"
name = "rrai-desktop-sdk"
version = "0.1.0"

[dependencies]
rrai-desktop-sdk-common = { version = "*", path = "crates/rrai-desktop-sdk-common" }
tauri-plugin-rrai-idns = { version = "*", path = "plugins/tauri-plugin-rrai-idns" }
tauri-plugin-rrai-appbox = { version = "*", path = "plugins/tauri-plugin-rrai-appbox" }
tauri-plugin-rrai-ipfs = { version = "*", path = "plugins/tauri-plugin-rrai-ipfs" }
tauri-plugin-rrai-sqlite = { version = "*", path = "plugins/tauri-plugin-rrai-sqlite" }
tauri-plugin-rrai-substrate = { version = "*", path = "plugins/tauri-plugin-rrai-substrate" }

[workspace]
members = [
  "crates/rrai-desktop-sdk-common",
  "plugins/tauri-plugin-rrai-idns",
  "plugins/tauri-plugin-rrai-sqlite",
  "plugins/tauri-plugin-rrai-ipfs",
  "plugins/tauri-plugin-rrai-substrate",
  "plugins/tauri-plugin-rrai-appbox",
]
