[package]
edition = "2021"
name = "rrai-desktop-sdk"
version = "0.1.0"

[dependencies]
rrai-desktop-sdk-common = { version = "*", path = "crates/rrai-desktop-sdk-common" }
rrai-cloud-client = { version = "*", path = "crates/rrai-cloud-client" }
tauri-plugin-rrai-idns = { version = "*", path = "plugins/tauri-plugin-rrai-idns" }
tauri-plugin-rrai-appbox = { version = "*", path = "plugins/tauri-plugin-rrai-appbox" }
tauri-plugin-rrai-storage = { version = "*", path = "plugins/tauri-plugin-rrai-storage" }
tauri-plugin-rrai-sqlite = { version = "*", path = "plugins/tauri-plugin-rrai-sqlite" }
tauri-plugin-rrai-substrate = { version = "*", path = "plugins/tauri-plugin-rrai-substrate" }
tauri-plugin-rrai-ability = { version = "*", path = "plugins/tauri-plugin-rrai-ability" }

[workspace]
members = [
  "crates/rrai-desktop-sdk-common",
  "crates/rrai-cloud-client",
  "plugins/tauri-plugin-rrai-idns",
  "plugins/tauri-plugin-rrai-sqlite",
  "plugins/tauri-plugin-rrai-storage",
  "plugins/tauri-plugin-rrai-substrate",
  "plugins/tauri-plugin-rrai-appbox",
  "plugins/tauri-plugin-rrai-ability",
]
