[package]
name = "rrai-cloud-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

serde = "1.0.136"
serde_json = "1.0.79"

#hyper
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
bytes = "1.4.0"
base64 = "0.21.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.2"
