[package]
name = "rrai-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2", features = ["api-all", "macos-private-api", "process-command-api", "updater"] }

#result
anyhow = "1.0"
thiserror = "1.0.40"

# logger
tracing = "0.1.15"
tracing-subscriber = {version = "0.3", features = ["fmt"] }

bytes = "1.1.0"
futures = "0.3"
lazy_static = "1.4.0"

home = "0.5.4"
nix = "0.26.2"
rusqlite = {version = "0.29.0", features = ["bundled"] }
async-trait = "0.1.68"
