[package]
name = "stable-diffusion-webui-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
data-encoding = "2.3.3"
image = "0.24.4"
reqwest = {version = "0.11.12", features = ["cookies", "json"]}
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
anyhow="1"
tokio = {version = "1.21.2", features = ["rt"]}