[package]
name = "tauri-plugin-rrai-ability"
version = "0.1.0"
edition = "2021"
authors = ["You"]
description = ""
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1.3" }

anyhow = "1.0"
thiserror = "1.0.40"
bytes = "1.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

tracing = "0.1.15"
tracing-subscriber = { version = "0.3", features = ["fmt"] }


url = "2.3.1"

futures-util = "0.3"

# rrai
rrai-desktop-sdk-common = { version = "*", path = "../../crates/rrai-desktop-sdk-common" }
mime_guess = "2.0.4"
mime = "0.3.17"
