[package]
name = "tauri-plugin-rrai-ability"
version = "0.1.0"
edition = "2021"
authors = ["You"]
description = ""
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1.4" }

anyhow = "1.0"
thiserror = "1.0.40"
bytes = "1.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"

tracing = "0.1.15"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

url = "2.3.1"
mime_guess = "2.0.4"
mime = "0.3.17"
tera = { version = "1", default-features = false }
futures-util = "0.3"
hyper = {version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"

deadqueue = "0.2"
stack-string = "0.8.0"
walkdir = "2.3.3"

base64 = "0.21.0"

# rrai
rrai-desktop-sdk-common = { version = "*", path = "../../crates/rrai-desktop-sdk-common" }
stable-diffusion-webui-client = { version = "*", path = "../../crates/stable-diffusion-webui-client" }

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.3.0"
