[package]
name = "tauri-plugin-rrai-idns"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1.2.2" }

# rrai
rrai-desktop-sdk-common = {version = "*", path = "../../crates/rrai-desktop-sdk-common"}