[package]
name = "tauri-plugin-rrai-idns"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
tauri = {version = "1.4", features = ["api-all", "macos-private-api", "process-command-api"]}

anyhow = "1.0"
bytes = "1.2"
futures = "0.3"
thiserror = "1.0.40"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1.15"
tracing-subscriber = {version = "0.3", features = ["fmt"]}

futures-util = "0.3.26"
hyper = {version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"
mpart-async = "0.6.1"

# rrai
rrai-desktop-sdk-common = {version = "*", path = "../../crates/rrai-desktop-sdk-common"}
tauri-plugin-rrai-ability = { version = "*", path = "../tauri-plugin-rrai-ability" }

