[package]
authors = ["jinisu@163.com"]
description = ""
edition = "2021"
exclude = ["/examples"]
name = "tauri-plugin-rrai-sqlite"
rust-version = "1.59"
version = "0.0.1"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.2.2"}

anyhow = "1.0"
thiserror = "1.0.40"

tracing = "0.1.15"
tracing-subscriber = {version = "0.3", features = ["fmt"]}

rusqlite = {version = "0.29.0", features = ["bundled"]}

# rrai
rrai-desktop-sdk-common = {version = "*", path = "../../crates/rrai-desktop-sdk-common"}
